- Renamed the "Sounds" plugin to "Character Voice"