@@ -10,8 +10,6 @@
     "name": 1
   },
 
-  "notificationSound": "/sfx/instruments/bones/a4.ogg",
-
   "radioMessageCropDirective": "?crop=7;7;60;62",
 
   "contextMenuOffset": [-3, -5],
