@@ -4,5 +4,10 @@
     "settings.plugins.charactervoice.enablewhisper": "Голос при ЛС",
     "settings.plugins.charactervoice.pitch": "Тон",
     "settings.plugins.charactervoice.test": "Тест",
-    "settings.plugins.charactervoice.description": "При отправке сообщения проигрывает звук разговора, связанный с вашей расой"
+    "settings.plugins.charactervoice.description": "При отправке сообщения проигрывает выбранный звук разговора",
+    "settings.plugins.charactervoice.wisperDescription": "При отправке ЛС проигрывает выбранный звук разговора",
+    "settings.plugins.charactervoice.customItem": "^green;Кастомный",
+    "settings.plugins.charactervoice.customSoundHint": "/введите/путь/к/звуку.ogg",
+    "settings.plugins.charactervoice.save": "Сохранить",
+    "settings.plugins.charactervoice.soundNotFound": "^red;Звук не найден"
 }
