@@ -1,0 +1,6 @@
+{
+    "settings.plugins.modesounds": "Звуки сообщений",
+    "settings.plugins.modesounds.mode_list": "Режимы",
+    "settings.plugins.modesounds.sound_list": "Звуки",
+    "settings.plugins.modesounds.clear": "Отключить звук"
+}
