@@ -1,0 +1,9 @@
+{
+  "frameGrid" : {
+    "size" : [13, 13],
+    "dimensions" : [4, 1],
+    "names" : [
+      [ "base", "hover", "selected", "selectedhover" ]
+    ]
+  }
+}
