@@ -1,1 +1,1 @@
-["mainchat", "fonts", "autohide", "colors", "charactervoice", "stickers", "afk", "voicechat", "reactions", "reply"]
+["mainchat", "fonts", "autohide", "colors", "charactervoice", "stickers", "afk", "voicechat", "reactions", "reply", "modesounds"]
